--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1032,7 +1032,47 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-rXAHzWcnCI {
-  background-image: url("../../../assets/images/background4.jpg");
+  background-image: url("../../../assets/images/1049251-zags-miraculous-tales-ladybug-and-cat-noir-makes-us-debut-1280x902.jpeg");
+}
+.cid-rXBHhiYN4f {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-rXBHhiYN4f .card-box {
+  padding: 0 2rem;
+}
+.cid-rXBHhiYN4f .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-rXBHhiYN4f .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-rXBHhiYN4f h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-rXBHhiYN4f p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-rXBHhiYN4f .mbr-text {
+  color: #767676;
+}
+.cid-rXBHhiYN4f .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-rXBHhiYN4f .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
 }
 .cid-rXvYVhruL2 .navbar {
   padding: .5rem 0;
