--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1034,73 +1034,73 @@ section.lazy-placeholder:after {
 .cid-rXAHzWcnCI {
   background-image: url("../../../assets/images/1049251-zags-miraculous-tales-ladybug-and-cat-noir-makes-us-debut-1280x902.jpeg");
 }
-.cid-rXBHhiYN4f {
+.cid-rXQsbYtRSg {
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #efefef;
 }
-.cid-rXBHhiYN4f .card-box {
+.cid-rXQsbYtRSg .card-box {
   padding: 0 2rem;
 }
-.cid-rXBHhiYN4f .mbr-section-btn {
+.cid-rXQsbYtRSg .mbr-section-btn {
   padding-top: 1rem;
 }
-.cid-rXBHhiYN4f .mbr-section-btn a {
+.cid-rXQsbYtRSg .mbr-section-btn a {
   margin-top: 1rem;
   margin-bottom: 0;
 }
-.cid-rXBHhiYN4f h4 {
+.cid-rXQsbYtRSg h4 {
   font-weight: 500;
   margin-bottom: 0;
   text-align: left;
   padding-top: 2rem;
 }
-.cid-rXBHhiYN4f p {
+.cid-rXQsbYtRSg p {
   margin-bottom: 0;
   text-align: left;
   padding-top: 1.5rem;
 }
-.cid-rXBHhiYN4f .mbr-text {
+.cid-rXQsbYtRSg .mbr-text {
   color: #767676;
 }
-.cid-rXBHhiYN4f .card-wrapper {
+.cid-rXQsbYtRSg .card-wrapper {
   height: 100%;
   padding-bottom: 2rem;
   background: #ffffff;
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
   transition: box-shadow 0.3s;
 }
-.cid-rXBHhiYN4f .card-wrapper:hover {
+.cid-rXQsbYtRSg .card-wrapper:hover {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
 }
-.cid-rXG6BBGHHR {
+.cid-rXQscs0aaF {
   padding-top: 60px;
   padding-bottom: 60px;
   position: relative;
   background-color: #ffffff;
 }
-.cid-rXG6BBGHHR p {
+.cid-rXQscs0aaF p {
   color: #767676;
 }
-.cid-rXG6BBGHHR .mbr-section-subtitle {
+.cid-rXQscs0aaF .mbr-section-subtitle {
   color: #767676;
   font-weight: 300;
 }
-.cid-rXG6BBGHHR .toggle-content {
+.cid-rXQscs0aaF .toggle-content {
   flex-basis: 100%;
   -webkit-flex-basis: 100%;
 }
-.cid-rXG6BBGHHR .card {
+.cid-rXQscs0aaF .card {
   border-radius: 0px;
   margin-bottom: -1px;
 }
-.cid-rXG6BBGHHR .card .card-header {
+.cid-rXQscs0aaF .card .card-header {
   border-radius: 0px;
   border: 0px;
   padding: 0;
 }
-.cid-rXG6BBGHHR .card .card-header a.panel-title {
+.cid-rXQscs0aaF .card .card-header a.panel-title {
   margin-bottom: 0;
   margin-top: -1px;
   font-weight: 500;
@@ -1108,28 +1108,28 @@ section.lazy-placeholder:after {
   display: block;
   text-decoration: none !important;
 }
-.cid-rXG6BBGHHR .card .card-header a.panel-title:focus {
+.cid-rXQscs0aaF .card .card-header a.panel-title:focus {
   text-decoration: none !important;
 }
-.cid-rXG6BBGHHR .card .card-header a.panel-title h4 {
+.cid-rXQscs0aaF .card .card-header a.panel-title h4 {
   border: 1px solid #dfdfdf;
   padding: 1.3rem 2rem;
   margin-bottom: 0;
 }
-.cid-rXG6BBGHHR .card .card-header a.panel-title h4 .sign {
+.cid-rXQscs0aaF .card .card-header a.panel-title h4 .sign {
   padding-right: 1rem;
 }
-.cid-rXG6BBGHHR .mbr-figure {
+.cid-rXQscs0aaF .mbr-figure {
   align-self: flex-start;
   -webkit-align-self: flex-start;
 }
 @media (max-width: 991px) {
-  .cid-rXG6BBGHHR .mbr-figure {
+  .cid-rXQscs0aaF .mbr-figure {
     padding-top: 2rem;
   }
 }
 @media (min-width: 992px) {
-  .cid-rXG6BBGHHR .mbr-figure {
+  .cid-rXQscs0aaF .mbr-figure {
     padding-left: 4rem;
   }
 }
