--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1031,48 +1031,8 @@ section.lazy-placeholder:after {
 .cid-rXvYVhruL2 .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-rXAHzWcnCI {
-  background-image: url("../../../assets/images/1049251-zags-miraculous-tales-ladybug-and-cat-noir-makes-us-debut-1280x902.jpeg");
-}
-.cid-rXQsbYtRSg {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #efefef;
-}
-.cid-rXQsbYtRSg .card-box {
-  padding: 0 2rem;
-}
-.cid-rXQsbYtRSg .mbr-section-btn {
-  padding-top: 1rem;
-}
-.cid-rXQsbYtRSg .mbr-section-btn a {
-  margin-top: 1rem;
-  margin-bottom: 0;
-}
-.cid-rXQsbYtRSg h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 2rem;
-}
-.cid-rXQsbYtRSg p {
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 1.5rem;
-}
-.cid-rXQsbYtRSg .mbr-text {
-  color: #767676;
-}
-.cid-rXQsbYtRSg .card-wrapper {
-  height: 100%;
-  padding-bottom: 2rem;
-  background: #ffffff;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.3s;
-}
-.cid-rXQsbYtRSg .card-wrapper:hover {
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
-  transition: box-shadow 0.3s;
+.cid-rYPFgDDGja {
+  background-image: url("../../../assets/images/background4.jpg");
 }
 .cid-rXvYVhruL2 .navbar {
   padding: .5rem 0;
