--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1074,6 +1074,44 @@ section.lazy-placeholder:after {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
 }
+.cid-rZ6FSDTYxe {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  position: relative;
+  background-color: #f9f9f9;
+}
+.cid-rZ6FSDTYxe .card {
+  border-radius: 0px;
+  margin-bottom: -1px;
+}
+.cid-rZ6FSDTYxe .card .card-header {
+  border-radius: 0px;
+  border: 0px;
+  padding: 0;
+}
+.cid-rZ6FSDTYxe .card .card-header a.panel-title {
+  margin-bottom: 0;
+  font-style: normal;
+  font-weight: 500;
+  display: block;
+  text-decoration: none !important;
+  margin-top: -1px;
+  line-height: normal;
+}
+.cid-rZ6FSDTYxe .card .card-header a.panel-title:focus {
+  text-decoration: none !important;
+}
+.cid-rZ6FSDTYxe .card .card-header a.panel-title h4 {
+  padding: 1.3rem 2rem;
+  border: 1px solid #dfdfdf;
+  margin-bottom: 0;
+}
+.cid-rZ6FSDTYxe .card .card-header a.panel-title h4 .sign {
+  padding-right: 1rem;
+}
+.cid-rZ6FSDTYxe .card .panel-body {
+  color: #767676;
+}
 .cid-rXvYVhruL2 .navbar {
   padding: .5rem 0;
   background: #333333;
