--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1034,6 +1034,44 @@ section.lazy-placeholder:after {
 .cid-rYPFgDDGja {
   background-image: url("../../../assets/images/1049251-zags-miraculous-tales-ladybug-and-cat-noir-makes-us-debut-1280x902.jpg");
 }
+.cid-rZ6FSDTYxe {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  position: relative;
+  background-color: #ffffff;
+}
+.cid-rZ6FSDTYxe .card {
+  border-radius: 0px;
+  margin-bottom: -1px;
+}
+.cid-rZ6FSDTYxe .card .card-header {
+  border-radius: 0px;
+  border: 0px;
+  padding: 0;
+}
+.cid-rZ6FSDTYxe .card .card-header a.panel-title {
+  margin-bottom: 0;
+  font-style: normal;
+  font-weight: 500;
+  display: block;
+  text-decoration: none !important;
+  margin-top: -1px;
+  line-height: normal;
+}
+.cid-rZ6FSDTYxe .card .card-header a.panel-title:focus {
+  text-decoration: none !important;
+}
+.cid-rZ6FSDTYxe .card .card-header a.panel-title h4 {
+  padding: 1.3rem 2rem;
+  border: 1px solid #dfdfdf;
+  margin-bottom: 0;
+}
+.cid-rZ6FSDTYxe .card .card-header a.panel-title h4 .sign {
+  padding-right: 1rem;
+}
+.cid-rZ6FSDTYxe .card .panel-body {
+  color: #767676;
+}
 .cid-rZ0JgOuH43 {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -1073,44 +1111,6 @@ section.lazy-placeholder:after {
 .cid-rZ0JgOuH43 .card-wrapper:hover {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
-}
-.cid-rZ6FSDTYxe {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  position: relative;
-  background-color: #f9f9f9;
-}
-.cid-rZ6FSDTYxe .card {
-  border-radius: 0px;
-  margin-bottom: -1px;
-}
-.cid-rZ6FSDTYxe .card .card-header {
-  border-radius: 0px;
-  border: 0px;
-  padding: 0;
-}
-.cid-rZ6FSDTYxe .card .card-header a.panel-title {
-  margin-bottom: 0;
-  font-style: normal;
-  font-weight: 500;
-  display: block;
-  text-decoration: none !important;
-  margin-top: -1px;
-  line-height: normal;
-}
-.cid-rZ6FSDTYxe .card .card-header a.panel-title:focus {
-  text-decoration: none !important;
-}
-.cid-rZ6FSDTYxe .card .card-header a.panel-title h4 {
-  padding: 1.3rem 2rem;
-  border: 1px solid #dfdfdf;
-  margin-bottom: 0;
-}
-.cid-rZ6FSDTYxe .card .card-header a.panel-title h4 .sign {
-  padding-right: 1rem;
-}
-.cid-rZ6FSDTYxe .card .panel-body {
-  color: #767676;
 }
 .cid-rXvYVhruL2 .navbar {
   padding: .5rem 0;
