--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1033,7 +1033,7 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-rYPFgDDGja {
-  background-image: url("../../../assets/images/1049251-zags-miraculous-tales-ladybug-and-cat-noir-makes-us-debut-1280x9020.jpg");
+  background-image: url("../../../assets/images/1049251-zags-miraculous-tales-ladybug-and-cat-noir-makes-us-debut-1280x902.jpg");
 }
 .cid-rZ6FSDTYxe {
   padding-top: 60px;
@@ -1114,7 +1114,7 @@ section.lazy-placeholder:after {
   transition: box-shadow 0.3s;
 }
 .cid-rZ0JgOuH43 H1 {
-  text-align: center;
+  text-align: left;
 }
 .cid-rXvYVhruL2 .navbar {
   padding: .5rem 0;
